force-app/main/default/objects/Project_PMT__c/fields/Change_Request_PMT__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>Change_Request_PMT__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>