force-app/main/default/objects/Project_PMT__c/fields/Current_Release_PMT__c.field-meta.xml
<CustomField>
    <fullName>Current_Release_PMT__c</fullName>
    <label>Current Release</label>
    <length>250</length>
    <type>Text</type>
</CustomField>