force-app/main/default/objects/Project_PMT__c/fields/Last_Release_PMT__c.field-meta.xml
<CustomField>
    <fullName>Last_Release_PMT__c</fullName>
    <label>Last Release</label>
    <length>250</length>
    <type>Text</type>
</CustomField>