force-app/main/default/objects/Project_PMT__c/fields/Project_Group_PMT__c.field-meta.xml
<CustomField>
    <fullName>Project_Group_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Team</value>
        </filterItems>
        <filterItems>
            <field>Account.Status_PMT__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project (Group)</relationshipLabel>
    <relationshipName>Projects_Group</relationshipName>
    <type>Lookup</type>
</CustomField>