force-app/main/default/objects/Project_PMT__c/fields/Project_Manager_PMT__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Team Member</value>
        </filterItems>
        <filterItems>
            <field>Contact.Status_PMT__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Status_PMT__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project (Manager)</relationshipLabel>
    <relationshipName>Project_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>