force-app/main/default/objects/Project_PMT__c/fields/Start_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_PMT__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>